links for myself

--- a/about.html
+++ b/about.html
@@ -200,7 +200,12 @@ $(document).ready(function () {
 </div>
 
 
-<p>More about this website.</p>
+<p>Source for this website:</p>
+<p><a href="https://github.com/jennybc/purrr-tutorial" class="uri">https://github.com/jennybc/purrr-tutorial</a></p>
+<p>Its home on the web:</p>
+<p><a href="https://jennybc.github.io/purrr-tutorial" class="uri">https://jennybc.github.io/purrr-tutorial</a></p>
+<p>More information about R Markdown websites:</p>
+<p><a href="http://rmarkdown.rstudio.com/rmarkdown_websites.html" class="uri">http://rmarkdown.rstudio.com/rmarkdown_websites.html</a></p>
 
 
 
