--- a/README.html
+++ b/README.html
@@ -173,7 +173,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">My Website</a>
+      <a class="navbar-brand" href="index.html">purrr tutorial</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -201,7 +201,9 @@ $(document).ready(function () {
 
 <div id="purrr-tutorial" class="section level1">
 <h1>purrr-tutorial</h1>
-<p>R work of staggering genius</p>
+<p>Source for an R Markdown website:</p>
+<p><a href="https://jennybc.github.io/purrr-tutorial" class="uri">https://jennybc.github.io/purrr-tutorial</a></p>
+<p>Tutorial initially created for <a href="https://github.com/minisciencegirl/studyGroup/issues/131">2016-08-12 meeting</a> of the Vancouver R Study Group.</p>
 </div>
 
 
