--- a/about.html
+++ b/about.html
@@ -173,7 +173,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">My Website</a>
+      <a class="navbar-brand" href="index.html">purrr tutorial</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -200,12 +200,12 @@ $(document).ready(function () {
 </div>
 
 
+<p>This is an R Markdown website. To learn more:</p>
+<p><a href="http://rmarkdown.rstudio.com/rmarkdown_websites.html" class="uri">http://rmarkdown.rstudio.com/rmarkdown_websites.html</a></p>
 <p>Source for this website:</p>
 <p><a href="https://github.com/jennybc/purrr-tutorial" class="uri">https://github.com/jennybc/purrr-tutorial</a></p>
 <p>Its home on the web:</p>
 <p><a href="https://jennybc.github.io/purrr-tutorial" class="uri">https://jennybc.github.io/purrr-tutorial</a></p>
-<p>More information about R Markdown websites:</p>
-<p><a href="http://rmarkdown.rstudio.com/rmarkdown_websites.html" class="uri">http://rmarkdown.rstudio.com/rmarkdown_websites.html</a></p>
 
 
 
