--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>My Website</title>
+<title>purrr tutorial</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -173,7 +173,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">My Website</a>
+      <a class="navbar-brand" href="index.html">purrr tutorial</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -195,12 +195,22 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">My Website</h1>
+<h1 class="title toc-ignore">purrr tutorial</h1>
 
 </div>
 
 
-<p>Hello, Website!</p>
+<p>The purrr package:</p>
+<ul>
+<li>On CRAN: <a href="https://cran.r-project.org/web/packages/purrr/index.html" class="uri">https://cran.r-project.org/web/packages/purrr/index.html</a></li>
+<li>Development on GitHub: <a href="https://github.com/hadley/purrr" class="uri">https://github.com/hadley/purrr</a></li>
+</ul>
+<p>Tutorial initially created for <a href="https://github.com/minisciencegirl/studyGroup/issues/131">2016-08-12 meeting</a> of the Vancouver R Study Group.<br />
+Some version will eventually appear as part of:</p>
+<ul>
+<li><a href="http://stat545.com">STAT 545</a> Exploratory Data Analysis</li>
+<li><a href="http://www.calendar.ubc.ca/vancouver/courses.cfm?page=code&amp;code=DSCI">DSCI 523</a> Data Wrangling, part of the UBC Master of Data Science</li>
+</ul>
 
 
 
