--- a/about.html
+++ b/about.html
@@ -181,11 +181,13 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">About</a>
+  <a href="examples.html">Examples</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        
+        <li>
+  <a href="about.html">About</a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -207,7 +209,7 @@ $(document).ready(function () {
 <p>Its home on the web:</p>
 <p><a href="https://jennybc.github.io/purrr-tutorial" class="uri">https://jennybc.github.io/purrr-tutorial</a></p>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"></span></p>
+<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
 
 
 
