--- a/examples.html
+++ b/examples.html
@@ -11,7 +11,7 @@
 
 
 
-<title>purrr tutorial</title>
+<title>Examples</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -197,23 +197,15 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">purrr tutorial</h1>
+<h1 class="title toc-ignore">Examples</h1>
 
 </div>
 
 
-<p><img src="https://www.stickermule.com/marketplace/embed_img/13594" style="max-width:100%;"></p>
-<p><em>DISCLAIMER: ROUGH AND INCOMPLETE!</em></p>
-<p>The purrr package:</p>
+<p>Worked examples and live coding activities</p>
 <ul>
-<li>On CRAN: <a href="https://cran.r-project.org/web/packages/purrr/index.html" class="uri">https://cran.r-project.org/web/packages/purrr/index.html</a></li>
-<li>Development on GitHub: <a href="https://github.com/hadley/purrr" class="uri">https://github.com/hadley/purrr</a></li>
-</ul>
-<p>Tutorial development started for <a href="https://github.com/minisciencegirl/studyGroup/issues/131">2016-08-12 meeting</a> of the Vancouver R Study Group.</p>
-<p>Some version will eventually appear as part of:</p>
-<ul>
-<li><a href="http://stat545.com">STAT 545</a> Exploratory Data Analysis</li>
-<li><a href="http://www.calendar.ubc.ca/vancouver/courses.cfm?page=code&amp;code=DSCI">DSCI 523</a> Data Wrangling, part of the UBC Master of Data Science</li>
+<li><a href="ex01_different-sized-samples.html">Sample from groups, n varies by group</a></li>
+<li><a href="ex10_trump-tweets.html">Trump Android words</a></li>
 </ul>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
