--- a/ex01_different-sized-samples.html
+++ b/ex01_different-sized-samples.html
@@ -296,7 +296,7 @@ set.seed(4561)
 #&gt; 8   virginica          6.4         3.2          5.3         2.3
 #&gt; 9   virginica          6.5         3.0          5.5         1.8
 #&gt; 10  virginica          6.1         3.0          4.9         1.8</code></pre>
-<p>Base R solution, with marginal comments about what bugs me, especially as someone who teaches R:</p>
+<p>A base R solution, with some marginal comments:</p>
 <pre class="r"><code>split_iris &lt;- split(iris, iris$Species) # why can&#39;t Species be found in iris?
                                         # where else would it be found?
 str(split_iris)                         # split_iris ~= nested_iris[[&quot;data&quot;]]
