--- a/ex20_bulk-gmail.html
+++ b/ex20_bulk-gmail.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Send a bunch of emails</title>
+<title>Send email via Gmail API</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -197,7 +197,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Send a bunch of emails</h1>
+<h1 class="title toc-ignore">Send email via Gmail API</h1>
 
 </div>
 
