--- a/ex24_xml-wrangling.html
+++ b/ex24_xml-wrangling.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Examples</title>
+<title>Tame XML from Google Sheets API</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -197,18 +197,27 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Examples</h1>
+<h1 class="title toc-ignore">Tame XML from Google Sheets API</h1>
 
 </div>
 
 
-<p>Worked examples and live coding activities</p>
+<p>Will be based on:</p>
+<p><a href="https://github.com/jennybc/manipulate-xml-with-purrr-dplyr-tidyr#readme" class="uri">https://github.com/jennybc/manipulate-xml-with-purrr-dplyr-tidyr#readme</a></p>
+<p>Overview:</p>
 <ul>
-<li><a href="ex01_different-sized-samples.html">Sample from groups, n varies by group</a></li>
-<li><a href="ex10_trump-tweets.html">Trump Android words</a></li>
-<li><a href="ex20_bulk-gmail.html">Send email via Gmail API</a></li>
-<li><a href="ex22_github-issues-pull-requests.html">Analyze GitHub issues and pull requests</a></li>
-<li><a href="ex24_xml-wrangling.html">Tame XML from Google Sheets API</a></li>
+<li>Wrangle XML from the Google Sheets API</li>
+<li>XPath to isolate XML nodesets as elements of a list
+<ul>
+<li>each element contains data for one row of a Google Sheet</li>
+<li>wrapped in great gobs of thoroughly namespaced XML</li>
+</ul></li>
+<li>Use <code>map()</code> on that list with more XPath to retain only nodes from <code>gsx</code> namespace
+<ul>
+<li>these nodes contain actual cell data</li>
+</ul></li>
+<li>Use <code>map()</code> at depth 2 to extract sub-node names and text</li>
+<li><code>unnest()</code> to go from one row per Sheet row to one row per Sheet cell</li>
 </ul>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
