--- a/examples.html
+++ b/examples.html
@@ -209,6 +209,7 @@ $(document).ready(function () {
 <li><a href="ex20_bulk-gmail.html">Send email via Gmail API</a></li>
 <li><a href="ex22_github-issues-pull-requests.html">Analyze GitHub issues and pull requests</a></li>
 <li><a href="ex24_xml-wrangling.html">Tame XML from Google Sheets API</a></li>
+<li><a href="ex70_gotchas.html">Gotchas</a></li>
 </ul>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
