--- a/examples.html
+++ b/examples.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Examples</title>
+<title>Worked Examples</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -181,7 +181,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="examples.html">Examples</a>
+  <a href="examples.html">Worked Examples</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -197,7 +197,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Examples</h1>
+<h1 class="title toc-ignore">Worked Examples</h1>
 
 </div>
 
