--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="examples.html">Examples</a>
+  <a href="examples.html">Worked Examples</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -208,6 +208,12 @@ $(document).ready(function () {
 <ul>
 <li>On CRAN: <a href="https://cran.r-project.org/web/packages/purrr/index.html" class="uri">https://cran.r-project.org/web/packages/purrr/index.html</a></li>
 <li>Development on GitHub: <a href="https://github.com/hadley/purrr" class="uri">https://github.com/hadley/purrr</a></li>
+<li>Coverage in <a href="http://r4ds.had.co.nz">R for Data Science</a>
+<ul>
+<li><a href="http://r4ds.had.co.nz/iteration.html">Iteration</a></li>
+<li><a href="http://r4ds.had.co.nz/hierarchy.html">Handling hierarchy</a></li>
+<li><a href="http://r4ds.had.co.nz/many-models.html">Many models</a></li>
+</ul></li>
 </ul>
 <p>Tutorial development started for <a href="https://github.com/minisciencegirl/studyGroup/issues/131">2016-08-12 meeting</a> of the Vancouver R Study Group.</p>
 <p>Some version will eventually appear as part of:</p>
