--- a/ex22_github-issues-pull-requests.html
+++ b/ex22_github-issues-pull-requests.html
@@ -181,7 +181,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="examples.html">Examples</a>
+  <a href="examples.html">Worked Examples</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
