add rough slides

--- a/ex03_github-api-json.html
+++ b/ex03_github-api-json.html
@@ -187,6 +187,9 @@ $(document).ready(function () {
 <li>
   <a href="examples.html">Worked Examples</a>
 </li>
+<li>
+  <a href="slides.html">Slides</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
