--- a/slides.html
+++ b/slides.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Worked Examples</title>
+<title>Slides</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -200,21 +200,18 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Worked Examples</h1>
+<h1 class="title toc-ignore">Slides</h1>
 
 </div>
 
 
-<p>Worked examples and live coding activities</p>
-<ul>
-<li><a href="ex01_different-sized-samples.html">Sample from groups, n varies by group</a></li>
-<li><a href="ex03_github-api-json.html">Making a data frame from a list from GitHub API</a></li>
-<li><a href="ex10_trump-tweets.html">Trump Android words</a></li>
-<li><a href="ex20_bulk-gmail.html">Send email via Gmail API</a></li>
-<li><a href="ex22_github-issues-pull-requests.html">Analyze GitHub issues and pull requests</a></li>
-<li><a href="ex24_xml-wrangling.html">Tame XML from Google Sheets API</a></li>
-<li><a href="ex70_gotchas.html">Gotchas</a></li>
-</ul>
+<p>Here are some INCREDIBLY ROUGH slides that give high-level intro, before live-coding.</p>
+<script async class="speakerdeck-embed" data-id="f60c9022c5824c0994cd3ec558820daf" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+<div style="margin-bottom:5px">
+<strong> <a href="https://speakerdeck.com/jennybc/purrr-tutorial-intro-very-rough-draft" title="purrr tutorial intro VERY ROUGH DRAFT" target="_blank">purrr tutorial intro VERY ROUGH DRAFT</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong>
+</div>
+<p>If the embed above doesn’t work, here’s a link:</p>
+<p><a href="https://speakerdeck.com/jennybc/purrr-tutorial-intro-very-rough-draft" class="uri">https://speakerdeck.com/jennybc/purrr-tutorial-intro-very-rough-draft</a></p>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
 
