work on github api extraction example

--- a/ex10_trump-tweets.html
+++ b/ex10_trump-tweets.html
@@ -299,7 +299,7 @@ substring(text, first, last)
 
 ARGUMENTS:
 text = character
-first = integer, position where substring to extract start
+first = integer, position where substring to extract starts
 last = integer, position where substring to extract stops</code></pre>
 <p>Imagine each tweet playing the role of <code>text</code>.<br />
 The elements of <code>matches</code> are awfully close to what we need for <code>first</code>.<br />
