--- a/examples.html
+++ b/examples.html
@@ -208,7 +208,7 @@ $(document).ready(function () {
 <p>Worked examples and live coding activities</p>
 <ul>
 <li><a href="ex01_different-sized-samples.html">Sample from groups, n varies by group</a></li>
-<li><a href="ex03_github-api-json.html">Making a data frame from a list from GitHub API</a></li>
+<li><a href="ex03_github-api-json.html">Simplifying data from a list from GitHub API</a></li>
 <li><a href="ex10_trump-tweets.html">Trump Android words</a></li>
 <li><a href="ex20_bulk-gmail.html">Send email via Gmail API</a></li>
 <li><a href="ex22_github-issues-pull-requests.html">Analyze GitHub issues and pull requests</a></li>
