annotate examples; slide embed is working

--- a/examples.html
+++ b/examples.html
@@ -207,12 +207,16 @@ $(document).ready(function () {
 
 <p>Worked examples and live coding activities</p>
 <ul>
-<li><a href="ex01_different-sized-samples.html">Sample from groups, n varies by group</a></li>
-<li><a href="ex03_github-api-json.html">Simplifying data from a list from GitHub API</a></li>
-<li><a href="ex10_trump-tweets.html">Trump Android words</a></li>
-<li><a href="ex20_bulk-gmail.html">Send email via Gmail API</a></li>
-<li><a href="ex22_github-issues-pull-requests.html">Analyze GitHub issues and pull requests</a></li>
-<li><a href="ex24_xml-wrangling.html">Tame XML from Google Sheets API</a></li>
+<li><a href="ex01_different-sized-samples.html">Sample from groups, n varies by group</a><br />
+</li>
+<li><a href="ex03_github-api-json.html">Simplifying data from a list from GitHub API</a> <em>suitable for a hands-on activity</em></li>
+<li><a href="ex10_trump-tweets.html">Trump Android words</a> <em>suitable for a hands-on activity</em></li>
+<li><a href="ex20_bulk-gmail.html">Send email via Gmail API</a><br />
+</li>
+<li><a href="ex22_github-issues-pull-requests.html">Analyze GitHub issues and pull requests</a><br />
+</li>
+<li><a href="ex24_xml-wrangling.html">Tame XML from Google Sheets API</a><br />
+</li>
 <li><a href="ex70_gotchas.html">Gotchas</a></li>
 </ul>
 
