--- a/ex70_gotchas.html
+++ b/ex70_gotchas.html
@@ -260,7 +260,7 @@ x %&gt;% {
   tibble(id = map_int(., &quot;int&quot;),
          chr = map_chr(., &quot;chr&quot;))
 }
-#&gt; # A tibble: 2 x 2
+#&gt; # A tibble: 2 × 2
 #&gt;      id   chr
 #&gt;   &lt;int&gt; &lt;chr&gt;
 #&gt; 1     1     a
