--- a/ex03_github-api-json.html
+++ b/ex03_github-api-json.html
@@ -20,9 +20,9 @@
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/htmlwidgets-0.7/htmlwidgets.js"></script>
-<link href="site_libs/jsoneditor-5.5.5/jsoneditor.min.css" rel="stylesheet" />
-<script src="site_libs/jsoneditor-5.5.5/jsoneditor.min.js"></script>
-<script src="site_libs/jsonedit-binding-1.0/jsonedit.js"></script>
+<link href="site_libs/jsoneditor-4.1.3/jsoneditor.min.css" rel="stylesheet" />
+<script src="site_libs/jsoneditor-4.1.3/jsoneditor.min.js"></script>
+<script src="site_libs/jsonedit-binding-0.1/jsonedit.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <link rel="stylesheet"
@@ -313,7 +313,7 @@ str(y[[2]])
 <p>What’s really awesome is to stack up these per-user lists row-wise and make a data frame. We use the special mapping function <code>map_df()</code> to signal that we want a data frame back.</p>
 <pre class="r"><code>users %&gt;%
   map_df(`[`, c(&quot;login&quot;, &quot;name&quot;, &quot;id&quot;, &quot;location&quot;))
-#&gt; # A tibble: 6 x 4
+#&gt; # A tibble: 6 × 4
 #&gt;         login                    name       id               location
 #&gt;         &lt;chr&gt;                   &lt;chr&gt;    &lt;int&gt;                  &lt;chr&gt;
 #&gt; 1 gaborcsardi            Gábor Csárdi   660288         Chippenham, UK
@@ -331,7 +331,7 @@ str(y[[2]])
     location = map_chr(., &quot;location&quot;)
   )
 }
-#&gt; # A tibble: 6 x 4
+#&gt; # A tibble: 6 × 4
 #&gt;         login                    name       id               location
 #&gt;         &lt;chr&gt;                   &lt;chr&gt;    &lt;int&gt;                  &lt;chr&gt;
 #&gt; 1 gaborcsardi            Gábor Csárdi   660288         Chippenham, UK
@@ -386,7 +386,7 @@ str(repos, max.level = 1)
 <pre class="r"><code>(udf &lt;- repos %&gt;%
     set_names(unames) %&gt;% 
     enframe(&quot;username&quot;, &quot;gh_repos&quot;))
-#&gt; # A tibble: 6 x 2
+#&gt; # A tibble: 6 × 2
 #&gt;      username    gh_repos
 #&gt;         &lt;chr&gt;      &lt;list&gt;
 #&gt; 1 gaborcsardi &lt;list [30]&gt;
