--- a/examples.html
+++ b/examples.html
@@ -207,6 +207,8 @@ $(document).ready(function () {
 
 <p>Worked examples and live coding activities</p>
 <ul>
+<li><a href="ex00_what-are-lists.html">Introduction to lists</a><br />
+</li>
 <li><a href="ex01_different-sized-samples.html">Sample from groups, n varies by group</a><br />
 </li>
 <li><a href="ex03_github-api-json.html">Simplifying data from a list from GitHub API</a> <em>suitable for a hands-on activity</em></li>
