revise 'what are lists' based on delivery in class

--- a/ex10_trump-tweets.html
+++ b/ex10_trump-tweets.html
@@ -829,7 +829,7 @@ pmap(mdf, substring)
 #&gt;     names(y) &lt;- names(x)
 #&gt;     y
 #&gt; }
-#&gt; &lt;bytecode: 0x7ff84a663bf8&gt;
+#&gt; &lt;bytecode: 0x7fa00e21b5f8&gt;
 #&gt; &lt;environment: namespace:base&gt;</code></pre>
 </div>
 
