--- a/ex00_what-are-lists.html
+++ b/ex00_what-are-lists.html
@@ -217,14 +217,14 @@ $(document).ready(function () {
 #&gt; [1] 1.2 2.4 3.6 4.8
 (v_char &lt;- letters[1:4])
 #&gt; [1] &quot;a&quot; &quot;b&quot; &quot;c&quot; &quot;d&quot;</code></pre>
-<p>Atomic vectors are homogeneous. Each “atom” has the same flavor, by which I roughly mean type or storage mode, and is a scalar, by which I mean “has length one”. The above examples show the most prevalent flavors of R vectors, though you will eventually encounter more exotic ones.</p>
+<p>Atomic vectors are homogeneous. Each “atom” has the same flavor, by which I roughly mean type or storage mode, and is a scalar, by which I mean “has length one”. The above examples show the most common flavors of R vectors, though you will eventually encounter more exotic ones.</p>
 <p>Exercises</p>
 <ol style="list-style-type: decimal">
-<li>Define the vectors above or similar. Use the family of <code>is.*()</code> functions to confirm vector type, e.g. <code>is.logical()</code>. You might need to guess or look some of them up.</li>
+<li>Define the vectors above or similar. Use the family of <code>is.*()</code> functions to confirm vector type, e.g. <code>is.logical()</code>. You might need to guess or look some of them up. <em>TO CONSIDER: prompt use of the equivalent functions from purrr, i.e. the <code>is_*()</code> family?</em></li>
 <li>What do <code>is.numeric()</code>, <code>is.integer()</code>, and <code>is.double()</code> return for the vectors that hold floating point number versus integers?</li>
 </ol>
 <p>The <code>c()</code> function is used to construct a vector by hand. We used it above to construct the logical vector. All the other vectors came about through other means and this is indicative of real life: most vectors aren’t made explicitly with <code>c()</code>. They tend to be created with some generator, like the <code>1:n</code> shortcut, or via transformation of an existing object.</p>
-<p>To index a vector is to address specific elements or atoms, either for reading or writing. We index a vector using square brackets, like so: <code>x[something]</code>. There are several ways to express which elements you want, i.e. there are several valid forms for <code>something</code>:</p>
+<p>To “index a vector” means to address specific elements or atoms, either for reading or writing. We index a vector using square brackets, like so: <code>x[something]</code>. There are several ways to express which elements you want, i.e. there are several valid forms for <code>something</code>:</p>
 <ul>
 <li>logical vector: keep elements of <code>x</code> for which <code>something</code> is <code>TRUE</code> and drop those for which it’s <code>FALSE</code></li>
 <li>integer vector, all positive: the elements specified in <code>something</code> are kept</li>
@@ -243,6 +243,7 @@ v_char[-4]
 <li>What happens when you ask for an element that is past the end of the vector, i.e. request <code>x[k]</code> when the length of <code>x</code> is less than <code>k</code>?</li>
 <li>What happen when you index <code>x</code> with a vector of positive integers that is shorter than <code>x</code>? How about when it’s longer? What about indexing with a logical vector that’s shorter? Logical vector that’s longer?</li>
 </ol>
+<p><em>Student Q: what’s a real world scenario in which you’d want the 0th element? My tentative lame answer: you never really want it. This just comes up in programming and therefore needs to be well-defined. Can I do any better?</em></p>
 <p>If you’ve worked the exercises, you’ve seen that it’s possible to get an atomic vector of length zero and to get elements that are <code>NA</code>. Notice that, in both of these scenarios, the underlying variable type is retained.</p>
 <pre class="r"><code>v_int[0]
 #&gt; integer(0)
@@ -253,8 +254,8 @@ v_doub[100]
 typeof(v_doub[100])
 #&gt; [1] &quot;double&quot;</code></pre>
 <p>Yes, there are different flavors of <code>NA</code>!</p>
-<p>Even though R’s vectors have a specific type, it’s quite easy to convert them to another type. This is called coercion. As a language for data analysis, this flexibility is generally a positive. It’s why, for example, we don’t stress out over integer versus double much in R. But unexpected coercion is a rich source of programming puzzles, so always consider this possibility when debugging. When you’re operating as an R programmer (versus interactive data analyst), you need to be much more intentional about types.</p>
-<p>There’s a hierarchy of types: the more primitive ones cheerfully and silently convert to those higher up the food chain. Here’s the order: logical &lt; integer &lt; double &lt; character.</p>
+<p>Even though R’s vectors have a specific type, it’s quite easy to convert them to another type. This is called <strong>coercion</strong>. As a language for data analysis, this flexibility is generally a positive. It’s why we generally don’t stress out over integer versus double in R. It’s why we can compute a proportion as the mean of a logical vector (we exploit automatic coercion to integer in this case). But unexpected coercion is a rich source of programming puzzles, so always consider this possibility when debugging. When you’re operating as an R programmer (versus interactive data analyst), you need to be much more intentional about types.</p>
+<p>There’s a hierarchy of types: the more primitive ones cheerfully and silently convert to those higher up in the food chain. Here’s the order: logical &lt; integer &lt; double &lt; character.</p>
 <pre class="r"><code>v_log
 #&gt; [1]  TRUE FALSE FALSE  TRUE
 as.integer(v_log)
@@ -280,7 +281,7 @@ str(v_doub_copy)
 <p>I end the discussion of atomic vectors with two specific examples of “being intentional about type”.</p>
 <ul>
 <li>Use type-specific <code>NA</code>s when doing setup.</li>
-<li>Use <code>L</code> to explicitly request integer. This looks weird but is a nod to short versus long integers. Just accept that this method of requesting a “long” is how we force a number to be an integer in R.</li>
+<li>Use <code>L</code> to explicitly request integer. This looks weird but is a nod to short versus long integers. Just accept that this is how we force a literal number to be interpreted as an integer in R.</li>
 </ul>
 <pre class="r"><code>(big_plans &lt;- rep(NA_integer_, 4))
 #&gt; [1] NA NA NA NA
@@ -302,13 +303,13 @@ str(big_plans)
 <li>Individual atoms might not be of the same flavor.</li>
 </ul>
 <p>You need a list!</p>
-<p>A list is actually still a vector in R, but it’s not an atomic vector. We construct a list explicit with <code>list()</code> but, like atomic vectors, most lists are created some other way in real life.</p>
-<pre class="r"><code>(x &lt;- list(one = 1:3, two = 4:6))
+<p>A list is actually still a vector in R, but it’s not an atomic vector. We construct a list explicitly with <code>list()</code> but, like atomic vectors, most lists are created some other way in real life.</p>
+<pre class="r"><code>(x &lt;- list(one = 1:3, two = c(&quot;four&quot;, &quot;five&quot;, &quot;six&quot;)))
 #&gt; $one
 #&gt; [1] 1 2 3
 #&gt; 
 #&gt; $two
-#&gt; [1] 4 5 6
+#&gt; [1] &quot;four&quot; &quot;five&quot; &quot;six&quot;
 (y &lt;- list(logical = TRUE, integer = 4L, double = 4 * 1.2, character = &quot;character&quot;))
 #&gt; $logical
 #&gt; [1] TRUE
@@ -323,16 +324,18 @@ str(big_plans)
 #&gt; [1] &quot;character&quot;</code></pre>
 <p>Exercises</p>
 <ol style="list-style-type: decimal">
-<li>Make the lists <code>x</code> and <code>y</code> shown above. Use <code>is.*()</code> functions to get to know these objects. Try to get some positive and negative results, i.e. establish a few things that <code>x</code> is and is NOT. Make sure to try <code>is.vector()</code> and <code>is.atomic()</code>.</li>
+<li>Make the lists <code>x</code> and <code>y</code> shown above. Use <code>is.*()</code> functions to get to know these objects. Try to get some positive and negative results, i.e. establish a few things that <code>x</code> is and is NOT. Make sure to try <code>is.vector()</code>, <code>is.atomic()</code>, and <code>is.recursive()</code>.</li>
 </ol>
+<p><em>Student Q: are all lists vectors? are all vectors lists? if not … can you please make a venn diagram of this stuff?</em></p>
 <p><strong>starting to just sketch now</strong></p>
 <p>Indexing. Single square vs double square vs <code>$</code>. The <a href="http://r4ds.had.co.nz/vectors.html#lists-of-condiments">“pepper shaker photos” in R for Data Science</a>.</p>
 </div>
 <div id="vectorized-operations" class="section level3">
 <h3>Vectorized operations</h3>
-<p>Lots of operations are naturally vectorized in R. But almost always for atomic vectors. Not for lists.</p>
+<p>Lots of operations are naturally vectorized in R. But for atomic vectors. Not for lists.</p>
 <pre class="r"><code>exp(v_doub)
 #&gt; [1]   3.320117  11.023176  36.598234 121.510418
+## put the same info in a list and ... this no longer works
 (l_doub &lt;- as.list(v_doub))
 #&gt; [[1]]
 #&gt; [1] 1.2
@@ -356,8 +359,9 @@ my_output &lt;- ## something of an appropriate size and flavor
 for(i in seq_along(my_list)) {
   my_output[[i]] &lt;- f(my_list([[i]]))
 }</code></pre>
-<p>Note the whole point of this tutorial is to show higher-level abstractions for this. You won’t be writing these for loops yourself!</p>
+<p>The whole point of this tutorial is to show higher-level abstractions for this. So you won’t be writing these for loops yourself!</p>
 <p><code>lapply()</code> is the basic mapper in base. We’ll use <code>map()</code> from purrr, which at this point is interchangeable with <code>lapply()</code>. Subsequent lessons and examples will demonstrate why we use <code>map()</code> and purrr more generally.</p>
+<p>We use <code>lapply()</code> or <code>purrr::map()</code> to visit each component of the list <code>l_doub</code> and exponentiate:</p>
 <pre class="r"><code>lapply(l_doub, exp)
 #&gt; [[1]]
 #&gt; [1] 3.320117
