--- a/ex10_trump-tweets.html
+++ b/ex10_trump-tweets.html
@@ -181,7 +181,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="examples.html">Worked Examples</a>
+  <a href="topic-index.html">Lessons and examples</a>
 </li>
 <li>
   <a href="slides.html">Slides</a>
@@ -829,7 +829,7 @@ pmap(mdf, substring)
 #&gt;     names(y) &lt;- names(x)
 #&gt;     y
 #&gt; }
-#&gt; &lt;bytecode: 0x7fa00e21b5f8&gt;
+#&gt; &lt;bytecode: 0x7fd1952c39f8&gt;
 #&gt; &lt;environment: namespace:base&gt;</code></pre>
 </div>
 
