--- a/slides.html
+++ b/slides.html
@@ -181,7 +181,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="examples.html">Worked Examples</a>
+  <a href="topic-index.html">Lessons and examples</a>
 </li>
 <li>
   <a href="slides.html">Slides</a>
