be slightly less apologetic

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ $(document).ready(function () {
 
 
 <p><img src="https://www.stickermule.com/marketplace/embed_img/13594" style="max-width:100%;"></p>
-<p><em>DISCLAIMER: ROUGH AND INCOMPLETE!</em></p>
+<p><em>DISCLAIMER: Under development</em></p>
 <p>The purrr package:</p>
 <ul>
 <li>On CRAN: <a href="https://cran.r-project.org/web/packages/purrr/index.html" class="uri">https://cran.r-project.org/web/packages/purrr/index.html</a></li>
@@ -218,9 +218,10 @@ $(document).ready(function () {
 <li><a href="http://r4ds.had.co.nz/many-models.html">Many models</a></li>
 </ul></li>
 </ul>
-<p>Tutorial development started for <a href="https://github.com/minisciencegirl/studyGroup/issues/131">2016-08-12 meeting</a> of the Vancouver R Study Group.</p>
-<p>Some version will eventually appear as part of:</p>
+<p>Materials created to support:</p>
 <ul>
+<li><a href="https://github.com/minisciencegirl/studyGroup/issues/131">2016-08-12 meeting</a> of the Vancouver R Study Group.<br />
+</li>
 <li><a href="http://stat545.com">STAT 545</a> Exploratory Data Analysis</li>
 <li><a href="http://www.calendar.ubc.ca/vancouver/courses.cfm?page=code&amp;code=DSCI">DSCI 523</a> Data Wrangling, part of the UBC Master of Data Science</li>
 </ul>
