--- a/ex10_trump-tweets.html
+++ b/ex10_trump-tweets.html
@@ -829,7 +829,7 @@ pmap(mdf, substring)
 #&gt;     names(y) &lt;- names(x)
 #&gt;     y
 #&gt; }
-#&gt; &lt;bytecode: 0x7fd1952c39f8&gt;
+#&gt; &lt;bytecode: 0x7f889e0b2bf8&gt;
 #&gt; &lt;environment: namespace:base&gt;</code></pre>
 </div>
 
