add structure to topic index

--- a/topic-index.html
+++ b/topic-index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Worked Examples</title>
+<title>Lessons and Examples</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -200,27 +200,39 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Worked Examples</h1>
+<h1 class="title toc-ignore">Lessons and Examples</h1>
 
 </div>
 
 
-<p>Worked examples and live coding activities</p>
+<div id="background-basics" class="section level3">
+<h3>Background basics</h3>
 <ul>
-<li><a href="ex00_what-are-lists.html">Introduction to lists</a><br />
-</li>
-<li><a href="ex01_different-sized-samples.html">Sample from groups, n varies by group</a><br />
-</li>
-<li><a href="ex03_github-api-json.html">Simplifying data from a list from GitHub API</a> <em>suitable for a hands-on activity</em></li>
-<li><a href="ex10_trump-tweets.html">Trump Android words</a> <em>suitable for a hands-on activity</em></li>
-<li><a href="ex20_bulk-gmail.html">Send email via Gmail API</a><br />
-</li>
-<li><a href="ex22_github-issues-pull-requests.html">Analyze GitHub issues and pull requests</a><br />
-</li>
-<li><a href="ex24_xml-wrangling.html">Tame XML from Google Sheets API</a><br />
-</li>
-<li><a href="ex70_gotchas.html">Gotchas</a></li>
+<li><a href="back00_vectors-and-lists.Rmd">Vectors and lists</a></li>
 </ul>
+</div>
+<div id="core-purrr-lessons" class="section level3">
+<h3>Core purrr lessons</h3>
+<p><em>coming soon</em></p>
+</div>
+<div id="worked-examples" class="section level3">
+<h3>Worked examples</h3>
+<ul>
+<li><a href="ex01_different-sized-samples.Rmd">Sample from groups, n varies by group</a><br />
+</li>
+<li><a href="ex03_github-api-json.Rmd">Simplifying data from a list from GitHub API</a> <em>suitable for a hands-on activity</em></li>
+<li><a href="ex10_trump-tweets.Rmd">Trump Android words</a> <em>suitable for a hands-on activity</em></li>
+<li><a href="ex20_bulk-gmail.Rmd">Send email via Gmail API</a><br />
+</li>
+<li><a href="ex22_github-issues-pull-requests.Rmd">Analyze GitHub issues and pull requests</a><br />
+</li>
+<li><a href="ex24_xml-wrangling.Rmd">Tame XML from Google Sheets API</a></li>
+</ul>
+</div>
+<div id="patterns-and-anti-patterns" class="section level3">
+<h3>Patterns and anti-patterns</h3>
+<p><em>coming soon</em></p>
+</div>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
 
