--- a/back00_vectors-and-lists.html
+++ b/back00_vectors-and-lists.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Introduction to lists</title>
+<title>Vectors and lists</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -200,7 +200,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Introduction to lists</h1>
+<h1 class="title toc-ignore">Vectors and lists</h1>
 
 </div>
 
