rename and reorganize topics

--- a/ls02_trump-tweets.html
+++ b/ls02_trump-tweets.html
@@ -829,7 +829,7 @@ pmap(mdf, substring)
 #&gt;     names(y) &lt;- names(x)
 #&gt;     y
 #&gt; }
-#&gt; &lt;bytecode: 0x7f8d9946a9f8&gt;
+#&gt; &lt;bytecode: 0x7ff8cbc9cfc0&gt;
 #&gt; &lt;environment: namespace:base&gt;</code></pre>
 </div>
 
