--- a/topic-index.html
+++ b/topic-index.html
@@ -205,23 +205,24 @@ $(document).ready(function () {
 </div>
 
 
+<p><em>more coming in the subsections below</em></p>
 <div id="background-basics" class="section level3">
 <h3>Background basics</h3>
 <ul>
-<li><a href="back00_vectors-and-lists.Rmd">Vectors and lists</a></li>
+<li><a href="bk00_vectors-and-lists.Rmd">Vectors and lists</a></li>
 </ul>
 </div>
 <div id="core-purrr-lessons" class="section level3">
 <h3>Core purrr lessons</h3>
-<p><em>coming soon</em></p>
+<ul>
+<li><a href="ls02_trump-tweets.Rmd">Trump Android words</a> <em>suitable for a hands-on activity</em></li>
+<li><a href="ls03_github-api-json.Rmd">Simplifying data from a list from GitHub API</a> <em>suitable for a hands-on activity</em></li>
+<li><a href="ls05_different-sized-samples.Rmd">Sample from groups, n varies by group</a></li>
+</ul>
 </div>
 <div id="worked-examples" class="section level3">
 <h3>Worked examples</h3>
 <ul>
-<li><a href="ex01_different-sized-samples.Rmd">Sample from groups, n varies by group</a><br />
-</li>
-<li><a href="ex03_github-api-json.Rmd">Simplifying data from a list from GitHub API</a> <em>suitable for a hands-on activity</em></li>
-<li><a href="ex10_trump-tweets.Rmd">Trump Android words</a> <em>suitable for a hands-on activity</em></li>
 <li><a href="ex20_bulk-gmail.Rmd">Send email via Gmail API</a><br />
 </li>
 <li><a href="ex22_github-issues-pull-requests.Rmd">Analyze GitHub issues and pull requests</a><br />
@@ -231,7 +232,9 @@ $(document).ready(function () {
 </div>
 <div id="patterns-and-anti-patterns" class="section level3">
 <h3>Patterns and anti-patterns</h3>
-<p><em>coming soon</em></p>
+<ul>
+<li><a href="pt00_gotchas.Rmd">Gotchas</a></li>
+</ul>
 </div>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
