finish vectors and lists

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@ $(document).ready(function () {
 
 
 <p><img src="https://www.stickermule.com/marketplace/embed_img/13594" style="max-width:100%;"></p>
-<p><em>DISCLAIMER: Under development</em></p>
-<p>The purrr package:</p>
+<p><em>NOTE: Under development</em></p>
+<p>More resources for purrr package:</p>
 <ul>
 <li>On CRAN: <a href="https://cran.r-project.org/web/packages/purrr/index.html" class="uri">https://cran.r-project.org/web/packages/purrr/index.html</a></li>
 <li>Development on GitHub: <a href="https://github.com/hadley/purrr" class="uri">https://github.com/hadley/purrr</a></li>
