--- a/topic-index.html
+++ b/topic-index.html
@@ -209,31 +209,33 @@ $(document).ready(function () {
 <div id="background-basics" class="section level3">
 <h3>Background basics</h3>
 <ul>
-<li><a href="bk00_vectors-and-lists.Rmd">Vectors and lists</a></li>
+<li><a href="bk00_vectors-and-lists.html">Vectors and lists</a><br />
+</li>
+<li><a href="bk01_base-functions.html">Relationship to base and plyr functions</a></li>
 </ul>
 </div>
 <div id="core-purrr-lessons" class="section level3">
 <h3>Core purrr lessons</h3>
 <ul>
-<li><a href="ls02_trump-tweets.Rmd">Trump Android words</a> <em>suitable for a hands-on activity</em></li>
-<li><a href="ls03_github-api-json.Rmd">Simplifying data from a list from GitHub API</a> <em>suitable for a hands-on activity</em></li>
-<li><a href="ls05_different-sized-samples.Rmd">Sample from groups, n varies by group</a></li>
+<li><a href="ls02_trump-tweets.html">Trump Android words</a> <em>suitable for a hands-on activity</em></li>
+<li><a href="ls03_github-api-json.html">Simplifying data from a list from GitHub API</a> <em>suitable for a hands-on activity</em></li>
+<li><a href="ls05_different-sized-samples.html">Sample from groups, n varies by group</a></li>
 </ul>
 </div>
 <div id="worked-examples" class="section level3">
 <h3>Worked examples</h3>
 <ul>
-<li><a href="ex20_bulk-gmail.Rmd">Send email via Gmail API</a><br />
+<li><a href="ex20_bulk-gmail.html">Send email via Gmail API</a><br />
 </li>
-<li><a href="ex22_github-issues-pull-requests.Rmd">Analyze GitHub issues and pull requests</a><br />
+<li><a href="ex22_github-issues-pull-requests.html">Analyze GitHub issues and pull requests</a><br />
 </li>
-<li><a href="ex24_xml-wrangling.Rmd">Tame XML from Google Sheets API</a></li>
+<li><a href="ex24_xml-wrangling.html">Tame XML from Google Sheets API</a></li>
 </ul>
 </div>
 <div id="patterns-and-anti-patterns" class="section level3">
 <h3>Patterns and anti-patterns</h3>
 <ul>
-<li><a href="pt00_gotchas.Rmd">Gotchas</a></li>
+<li><a href="pt00_gotchas.html">Gotchas</a></li>
 </ul>
 </div>
 
