work on lesson re: github api data

--- a/topic-index.html
+++ b/topic-index.html
@@ -218,7 +218,7 @@ $(document).ready(function () {
 <h3>Core purrr lessons</h3>
 <ul>
 <li><a href="ls02_trump-tweets.html">Trump Android words</a> <em>suitable for a hands-on activity</em></li>
-<li><a href="ls03_github-api-json.html">Simplifying data from a list from GitHub API</a> <em>suitable for a hands-on activity</em></li>
+<li><a href="ls03_github-api-json.html">Simplifying data from a list of GitHub users</a> <em>suitable for a hands-on activity</em></li>
 <li><a href="ls05_different-sized-samples.html">Sample from groups, n varies by group</a></li>
 </ul>
 </div>
