record versions for purrr and repurrrsive

--- a/about.html
+++ b/about.html
@@ -211,6 +211,29 @@ $(document).ready(function () {
 <p><a href="https://github.com/jennybc/purrr-tutorial" class="uri">https://github.com/jennybc/purrr-tutorial</a></p>
 <p>Its home on the web:</p>
 <p><a href="https://jennybc.github.io/purrr-tutorial" class="uri">https://jennybc.github.io/purrr-tutorial</a></p>
+<pre class="r"><code>devtools::session_info(c(&quot;purrr&quot;, &quot;repurrrsive&quot;))</code></pre>
+<pre><code>## Session info -------------------------------------------------------------</code></pre>
+<pre><code>##  setting  value                       
+##  version  R version 3.3.1 (2016-06-21)
+##  system   x86_64, darwin13.4.0        
+##  ui       X11                         
+##  language (EN)                        
+##  collate  en_CA.UTF-8                 
+##  tz       America/Vancouver           
+##  date     2016-10-30</code></pre>
+<pre><code>## Packages -----------------------------------------------------------------</code></pre>
+<pre><code>##  package     * version    date       source                          
+##  assertthat    0.1        2013-12-06 CRAN (R 3.2.0)                  
+##  BH            1.60.0-2   2016-05-07 CRAN (R 3.2.5)                  
+##  DBI           0.5-1      2016-09-10 CRAN (R 3.3.0)                  
+##  dplyr         0.5.0      2016-06-24 CRAN (R 3.3.0)                  
+##  lazyeval      0.2.0.9000 2016-10-24 Github (hadley/lazyeval@c155c3d)
+##  magrittr      1.5        2014-11-22 CRAN (R 3.2.0)                  
+##  purrr         0.2.2.9000 2016-10-24 Github (hadley/purrr@8c72c35)   
+##  R6            2.2.0      2016-10-05 CRAN (R 3.3.0)                  
+##  Rcpp          0.12.7     2016-09-05 cran (@0.12.7)                  
+##  repurrrsive   0.0.0.9000 2016-10-30 local                           
+##  tibble        1.2        2016-08-26 cran (@1.2)</code></pre>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
 
