--- a/bk01_base-functions.html
+++ b/bk01_base-functions.html
@@ -19,6 +19,9 @@
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <link rel="stylesheet"
@@ -163,6 +166,100 @@ $(document).ready(function () {
 
 
 
+<script>
+$(document).ready(function ()  {
+
+    // move toc-ignore selectors from section div to header
+    $('div.section.toc-ignore')
+        .removeClass('toc-ignore')
+        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
+
+    // establish options
+    var options = {
+      selectors: "h1,h2,h3",
+      theme: "bootstrap3",
+      context: '.toc-content',
+      hashGenerator: function (text) {
+        return text.replace(/[.\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+      },
+      ignoreSelector: ".toc-ignore",
+      scrollTo: 0
+    };
+    options.showAndHide = true;
+    options.smoothScroll = true;
+
+    // tocify
+    var toc = $("#TOC").tocify(options).data("toc-tocify");
+});
+</script>
+
+<style type="text/css">
+
+#TOC {
+  margin: 25px 0px 20px 0px;
+}
+@media (max-width: 768px) {
+#TOC {
+  position: relative;
+  width: 100%;
+}
+}
+
+
+.toc-content {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+div.main-container {
+  max-width: 1200px;
+}
+
+div.tocify {
+  width: 20%;
+  max-width: 260px;
+  max-height: 85%;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div.tocify {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  div.tocify {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+.tocify ul, .tocify li {
+  line-height: 20px;
+}
+
+.tocify-subheader .tocify-item {
+  font-size: 0.9em;
+  padding-left: 5px;
+}
+
+.tocify .list-group-item {
+  border-radius: 0px;
+}
+
+
+</style>
+
+<!-- setup 3col/9col grid for toc_float and main content  -->
+<div class="row-fluid">
+<div class="col-xs-12 col-sm-4 col-md-3">
+<div id="TOC" class="tocify">
+</div>
+</div>
+
+<div class="toc-content col-xs-12 col-sm-8 col-md-9">
+
+
 
 
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
@@ -214,17 +311,82 @@ $(document).ready(function () {
 #&gt; Conflicts with tidy packages ----------------------------------------------
 #&gt; filter(): dplyr, stats
 #&gt; lag():    dplyr, stats
-library(gapminder)</code></pre>
+library(repurrrsive)</code></pre>
 <ul>
 <li>List relevant base and plyr functions. Create a base &lt;–&gt; purrr, base &lt;–&gt; plyr map.</li>
 <li>Point out general reasons to consider purrr.</li>
 <li>Point out specific gotchas or FAQs that purrr avoids or answers.</li>
 </ul>
-<div id="base-functions" class="section level3">
-<h3>Base functions</h3>
-<p><code>lapply()</code> &lt;–&gt; <code>purrr::map()</code></p>
-<p><code>sapply()</code>, fine for interactive use, but unpredictability hard to program around</p>
+<div id="lapply-and-purrrmap" class="section level2">
+<h2><code>lapply()</code> and <code>purrr::map()</code></h2>
+<p>The main (only?) difference is access to purrr’s shortcuts for anonymous functions.</p>
+<div class="row">
+<div class="col-md-6">
+<pre class="r"><code>lapply(got_chars[1:3],
+       function(x) x[[&quot;name&quot;]])
+#&gt; [[1]]
+#&gt; [1] &quot;Arya Stark&quot;
+#&gt; 
+#&gt; [[2]]
+#&gt; [1] &quot;Brandon Stark&quot;
+#&gt; 
+#&gt; [[3]]
+#&gt; [1] &quot;Catelyn Stark&quot;</code></pre>
+</div>
+<div class="col-md-6">
+<pre class="r"><code>map(got_chars[1:3], &quot;name&quot;)
+#&gt; [[1]]
+#&gt; [1] &quot;Arya Stark&quot;
+#&gt; 
+#&gt; [[2]]
+#&gt; [1] &quot;Brandon Stark&quot;
+#&gt; 
+#&gt; [[3]]
+#&gt; [1] &quot;Catelyn Stark&quot;</code></pre>
+</div>
+</div>
+<p>This is also <code>plyr::llply()</code>, although it offers some other arguments, such as <code>.progress</code> and <code>.parallel</code>.</p>
+<pre class="r"><code>plyr::llply(got_chars[1:3], function(x) x[[&quot;name&quot;]])</code></pre>
+</div>
+<div id="sapply-and" class="section level2">
+<h2><code>sapply()</code> and ???</h2>
+<p><code>sapply()</code> is a base function that attempts to apply a reasonable simplification to the output of <code>lapply()</code>. It’s fine for interactive use, but due to the unpredictability of it return value, it’s unwise to use it in programming. There is no equivalent in purrr or plyr.</p>
+<p>Problem demonstration: The characters in Game of Thrones can have aliases. Some have several, some have one, some have none. Depending on which characters I work with, the same code can return an object of entirely different class, i.e. a list or a character vector:</p>
+<pre class="r"><code>(aliases1 &lt;- sapply(got_chars[2:4], function(x) x[[&quot;aliases&quot;]]))
+#&gt; [[1]]
+#&gt; [1] &quot;Bran&quot;            &quot;Bran the Broken&quot; &quot;The Winged Wolf&quot;
+#&gt; 
+#&gt; [[2]]
+#&gt; [1] &quot;Catelyn Tully&quot;     &quot;Lady Stoneheart&quot;   &quot;The Silent Sistet&quot;
+#&gt; [4] &quot;Mother Mercilesr&quot;  &quot;The Hangwomans&quot;   
+#&gt; 
+#&gt; [[3]]
+#&gt; [1] &quot;Ned&quot;            &quot;The Ned&quot;        &quot;The Quiet Wolf&quot;
+str(aliases1)
+#&gt; List of 3
+#&gt;  $ : chr [1:3] &quot;Bran&quot; &quot;Bran the Broken&quot; &quot;The Winged Wolf&quot;
+#&gt;  $ : chr [1:5] &quot;Catelyn Tully&quot; &quot;Lady Stoneheart&quot; &quot;The Silent Sistet&quot; &quot;Mother Mercilesr&quot; ...
+#&gt;  $ : chr [1:3] &quot;Ned&quot; &quot;The Ned&quot; &quot;The Quiet Wolf&quot;
+(aliases2 &lt;- sapply(got_chars[c(14, 22, 25)], function(x) x[[&quot;aliases&quot;]]))
+#&gt; [1] &quot;Merrett Muttonhead&quot;       &quot;The Iron Captain&quot;        
+#&gt; [3] &quot;Griffthe Mad King&#39;s Hand&quot;
+str(aliases2)
+#&gt;  chr [1:3] &quot;Merrett Muttonhead&quot; &quot;The Iron Captain&quot; ...</code></pre>
+</div>
+<div id="vapply-and-map_" class="section level2">
+<h2><code>vapply()</code> and <code>map_*()</code></h2>
 <p><code>vapply()</code>, some similarities with <code>map_chr()</code>, <code>map_lgl()</code>, etc. Touted as the base option for programming, but still unpredictable.</p>
+<div class="row">
+<div class="col-md-6">
+<pre class="r"><code>vapply(got_chars[1:3],
+       function(x) x[[&quot;name&quot;]], character(1))
+#&gt; [1] &quot;Arya Stark&quot;    &quot;Brandon Stark&quot; &quot;Catelyn Stark&quot;</code></pre>
+</div>
+<div class="col-md-6">
+<pre class="r"><code>map_chr(got_chars[1:3], &quot;name&quot;)
+#&gt; [1] &quot;Arya Stark&quot;    &quot;Brandon Stark&quot; &quot;Catelyn Stark&quot;</code></pre>
+</div>
+</div>
 <p>Example gotcha from real life. Using <code>vapply()</code> inside a function. <code>n</code> can vary depending on input. But <code>vapply()</code>’s simplifying behavior means it will return 2D or 1D object, depending on <code>n</code>. It has no way to say <code>drop = FALSE</code>.</p>
 <div class="row">
 <div class="col-md-6">
@@ -252,43 +414,19 @@ map(c(&quot;a&quot;, &quot;b&quot;), f, n = 1) %&gt;% lift_dl(cbind)(.)
 #&gt; [1,] &quot;a&quot;  &quot;b&quot;</code></pre>
 </div>
 </div>
-<p><code>mapply()</code>, similar to <code>map2()</code>, <code>pmap()</code></p>
-<p><code>tapply()</code>, <code>aggregate()</code></p>
-<p>Possible format for some comparisons</p>
-<div class="row">
-<div class="col-md-6">
-<pre class="r"><code>aggregate(breaks ~ wool + tension,
-          data = warpbreaks, mean)
-#&gt;   wool tension   breaks
-#&gt; 1    A       L 44.55556
-#&gt; 2    B       L 28.22222
-#&gt; 3    A       M 24.00000
-#&gt; 4    B       M 28.77778
-#&gt; 5    A       H 24.55556
-#&gt; 6    B       H 18.77778</code></pre>
 </div>
-<div class="col-md-6">
-<pre class="r"><code>warpbreaks %&gt;% 
-  group_by(wool, tension) %&gt;% 
-  summarise(mean = mean(breaks), var = var(breaks))
-#&gt; Source: local data frame [6 x 4]
-#&gt; Groups: wool [?]
-#&gt; 
-#&gt;     wool tension     mean       var
-#&gt;   &lt;fctr&gt;  &lt;fctr&gt;    &lt;dbl&gt;     &lt;dbl&gt;
-#&gt; 1      A       L 44.55556 327.52778
-#&gt; 2      A       M 24.00000  75.00000
-#&gt; 3      A       H 24.55556 105.52778
-#&gt; 4      B       L 28.22222  97.19444
-#&gt; 5      B       M 28.77778  88.94444
-#&gt; 6      B       H 18.77778  23.94444</code></pre>
+<div id="mapply-and-map2-pmap" class="section level2">
+<h2><code>mapply()</code> and <code>map2()</code>, <code>pmap()</code></h2>
 </div>
-</div>
+<div id="tapply-aggregate" class="section level2">
+<h2><code>tapply()</code>, <code>aggregate()</code></h2>
 </div>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
 
 
+</div>
+</div>
 
 </div>
 
