--- a/topic-index.html
+++ b/topic-index.html
@@ -217,6 +217,8 @@ $(document).ready(function () {
 <div id="core-purrr-lessons" class="section level3">
 <h3>Core purrr lessons</h3>
 <ul>
+<li><a href="ls01_map-basics.html">Basic mapping with Wes Anderson and Game of Thrones</a><br />
+</li>
 <li><a href="ls02_trump-tweets.html">Trump Android words</a> <em>suitable for a hands-on activity</em></li>
 <li><a href="ls03_github-api-json.html">Simplifying data from a list of GitHub users</a> <em>suitable for a hands-on activity</em></li>
 <li><a href="ls05_different-sized-samples.html">Sample from groups, n varies by group</a></li>
